# awesome-desktop

./: CMakeLists.txt
src/desktop/: desktop.cpp  desktop.h  desktopwindow.cpp  desktopwindow.h  main.cpp  menubarwindow.cpp  menubarwindow.h  screen.cpp  screen.h  window.cpp  window.h
src/login/: main.cpp
